--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,51 @@
-pandas==2.2.2
+altgraph==0.17.4
+auto-py-to-exe==2.43.3
+beautifulsoup4==4.12.3
+bottle==0.12.25
+bottle-websocket==0.2.9
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.5
+cx_Freeze==6.15.16
+cx_Logging==3.2.0
+distro==1.9.0
+Eel==0.16.0
+et-xmlfile==1.1.0
+future==1.0.0
+gevent==24.2.1
+gevent-websocket==0.10.1
+greenlet==3.0.3
+idna==3.7
+JPype1==1.5.0
+lief==0.14.1
+numpy==1.26.4
 openpyxl==3.1.2
+packaging==24.0
+pandas==2.2.2
+pdfminer.six==20231228
+pdfplumber==0.11.0
+pefile==2023.2.7
+pillow==10.3.0
+pycparser==2.22
+pyinstaller==6.6.0
+pyinstaller-hooks-contrib==2024.4
+pyparsing==3.1.2
+pypdfium2==4.29.0
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pywin32-ctypes==0.2.2
+requests==2.31.0
+six==1.16.0
+soupsieve==2.5
+tabula-py==2.9.0
+tzdata==2024.1
+urllib3==2.2.1
+whichcraft==0.6.1
 xlrd==2.0.1
-pip install PyQt5
-pip install xlsxwriter
+XlsxWriter==3.2.0
+zope.event==5.0
+zope.interface==6.3
